<resources>
    <string name="app_name">Lesson5_Maskaikin</string>

    <string name="button_go_to_activity4">go to 4</string>
    <string name="button_go_to_activity2">go to 2</string>
    <string name="button_go_to_activity4_again">go to 4 again</string>
    <string name="button_go_to_activity3">go to 3</string>
    <string name="button_go_to_activity5">go to 5</string>
    <string name="button_go_to_activity1">go to 1</string>
    <string name="button_deliver_result">deliver result</string>

    <string name="activity1">Activity 1</string>
    <string name="activity2">Activity 2</string>
    <string name="activity3">Activity 3</string>
    <string name="activity4">Activity 4</string>
    <string name="activity5">Activity 5</string>

    <string name="wait_message">Жду сообщение..</string>
</resources>
