<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity3_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <Button
        android:id="@+id/button_go_to_activity5"
        style="@style/ButtonTop"
        android:text="@string/button_go_to_activity5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewActivity3"
        style="@style/TextViewShowActivity"
        android:text="@string/activity3"
        app:layout_constraintBottom_toTopOf="@+id/button_go_to_activity5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_go_to_activity1" />

    <Button
        android:id="@+id/button_go_to_activity1"
        style="@style/ButtonBottom"
        android:text="@string/button_go_to_activity1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>